--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "gulp-autoprefixer": "^2.3.1",
     "gulp-pug": "^2.0.0",
     "gulp-sass": "^2.1.0",
-    "pug": "^2.0.0-alpha6"
+    "pug": "^2.0.0-alpha6",
+    "tachyons": "^4.0.0-beta.29"
   },
   "repository": {
     "type": "git",
