--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "gulp-pug": "^2.0.0",
     "gulp-sass": "^2.1.0",
     "pug": "^2.0.0-alpha6",
-    "tachyons": "^4.0.0-beta.29"
+    "tachyons": "^4.0.0-beta.29",
+    "webpack": "^1.13.1",
+    "webpack-dev-server": "^1.14.1"
   },
   "repository": {
     "type": "git",
